--- a/Styles.unity/Assets/Styles.Game/Styles.asmdef
+++ b/Styles.unity/Assets/Styles.Game/Styles.asmdef
@@ -2,7 +2,8 @@
     "name": "Styles",
     "rootNamespace": "",
     "references": [
-        "GUID:e283485f0a77da2478d9709c9c7d8a14"
+        "GUID:e283485f0a77da2478d9709c9c7d8a14",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
