--- a/Styles.unity/Assets/Styles.Game/Styles.asmdef
+++ b/Styles.unity/Assets/Styles.Game/Styles.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:e283485f0a77da2478d9709c9c7d8a14",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
